--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 services:
-  application:
+  laravel-app:
     build:
       context: .
       dockerfile: docker/common/php-fpm/Dockerfile
@@ -22,7 +22,7 @@ services:
       - .:/var/www/html
       - ./docker/common/nginx/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
-      - application
+      - laravel-app
     networks:
       - laravel_app
 networks:
